ADAPT-530: Fixing span so not cut off at the top of text.

--- a/src/scss/theme/banners/_banner-in-page--no-image.scss
+++ b/src/scss/theme/banners/_banner-in-page--no-image.scss
@@ -60,6 +60,7 @@
           // small text / superheading field
           span {
             @include saa-modular-typography-small;
+            padding-top: 1px; // fixes letters getting cut off
           }
 
           span,
